# public/swagger/swagger.json
@@ -217,6 +217,105 @@
                     }
                 }
             }
+        },
+        "/api/profile/{id}": {
+            "get": {
+                "tags": [
+                    "Profile"
+                ],
+                "summary": [
+                    "Profile detail"
+                ],
+                "description": "Return profile detail by Id",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Length of record need to response",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "properties": {
+                                "id": {
+                                    "type": "number",
+                                    "example": 1
+                                },
+                                "first_name": {
+                                    "type": "string",
+                                    "example": "admin"
+                                },
+                                "last_name": {
+                                    "type": "string",
+                                    "example": "admin"
+                                },
+                                "username": {
+                                    "type": "string",
+                                    "example": "admin"
+                                },
+                                "email": {
+                                    "type": "string",
+                                    "example": "admin@gmail.com"
+                                },
+                                "address": {
+                                    "type": "string",
+                                    "example": "Danang, Vietnam"
+                                },
+                                "code_id": {
+                                    "type": "string",
+                                    "example": "admincode"
+                                },
+                                "personal_photo": {
+                                    "type": "string",
+                                    "example": "..."
+                                },
+                                "gender": {
+                                    "type": "number",
+                                    "example": 0
+                                },
+                                "created_at": {
+                                    "type": "string",
+                                    "example": "2000-12-03 12:20:20"
+                                },
+                                "updated_at": {
+                                    "type": "string",
+                                    "example": "2000-12-03 12:20:20"
+                                },
+                                "totalLike": {
+                                    "type": "number",
+                                    "example": 0
+                                },
+                                "totalPost": {
+                                    "type": "number",
+                                    "example": 0
+                                },
+                                "following": {
+                                    "type": "number",
+                                    "example": 0
+                                },
+                                "followed": {
+                                    "type": "number",
+                                    "example": 0
+                                }
+                            },
+                            "type": "object"
+                        }
+                    },
+                    "422": {
+                        "description": "Missing Data"
+                    },
+                    "404": {
+                        "description": "NotFound Data"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                }
+            }
         }
     },
     "definitions": {}
